--- a/static/css/dashboard_sidebar.css
+++ b/static/css/dashboard_sidebar.css
@@ -83,20 +83,20 @@
 }
 
 .dashboard-side .user-money h2 {
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 300;
-    padding-top: 35px;
+    padding-top: 20px;
 }
 
 .dashboard-side .user-money h3 {
     font-size: 28px;
     font-weight: bold;
-    padding-top: 15px;
+    padding-top: 10px;
     letter-spacing: -.01em;
 }
 
 .dashboard-side .user-money .user-money-button {
-    margin-top: 30px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -162,4 +162,15 @@
     font-size: 12px;
     font-weight: 300;
     color: #777777;
+}
+
+.dashboard-side .user-money .side-mileage {
+    padding-top: 10px;
+}
+
+hr {
+    width: 90%;
+    height: 1px;
+    background-color: #83a5fd;
+    border: 0 none;
 }
