fix error 1:1 contact with admin user, add link in dashboard page

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     <script src="/static/js/jquery-2.2.4.min.js"></script>
     <script type="text/javascript">
         $(function () {
-            $('#contact_button').on('click', function () {
+            $('.contact_button').on('click', function () {
                 // 관리자 계정(또는 1:1상담 받을 계정)으로 연결. 2번째, 3번째, 4번째 파라미터를 관리자 계정 정보로 넣고 주석 해제하기
                 startMessage('{{ user.id }}', '{{ user.id|cs_admin_user_id }}', '{{ user.id|cs_admin_user_short_name }}', '{{ user.id|cs_admin_user_avatar }}');
             });
@@ -50,7 +50,7 @@
             고객센터
         </div>
         <div class="contact-drop-down" style="display:none;">
-            <a id="contact_button">1:1 문의</a>
+            <a class="contact_button">1:1 문의</a>
             <a href="{% url 'dashboard' %}">신고하기</a>
         </div>
     </div>
