dashboard-main square fix (issu #162)

--- a/templates/account/account_home.html
+++ b/templates/account/account_home.html
@@ -30,46 +30,36 @@
                     <tr>
                         <td>
                             <a href="{% url 'wish_list' %}">
-                                <div style="height:100%;width:100%">
-                                    구매<i class="fa fa-angle-right"></i>
-                                    <div class="sub-info">0</div>
-                                </div>
+                                구매<i class="fa fa-angle-right"></i>
+                                <div class="sub-info">0</div>
                             </a>
                         </td>
                         <td>
                             <a href="{% url 'product_order_manage' %}">
-                                <div style="height:100%;width:100%">
-                                    판매<i class="fa fa-angle-right"></i>
-                                    <div class="sub-info">0</div>
-                                </div>
+                                판매<i class="fa fa-angle-right"></i>
+                                <div class="sub-info">0</div>
                             </a>
                         </td>
                         <td>
                             <a href="{% url 'message_lounge' %}">
-                                <div style="height:100%;width:100%">
-                                    메시지<i class="fa fa-angle-right"></i>
-                                    <div class="sub-info unread-message"></div>
-                                </div>
+                                메시지<i class="fa fa-angle-right"></i>
+                                <div class="sub-info unread-message"></div>
                             </a>
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <a href="{% url 'point_history' %}">
-                                <div style="height:100%;width:100%">
-                                    포인트<i class="fa fa-angle-right"></i>
-                                </div>
+                                포인트<i class="fa fa-angle-right"></i>
                             </a>
                         </td>
                         <td>
                             <a href="{% url 'change_info' %}">
-                                <div style="height:100%;width:100%">
-                                    내 정보<i class="fa fa-angle-right"></i>
-                                </div>
+                                내 정보<i class="fa fa-angle-right"></i>
                             </a>
                         </td>
                         <td class="contact_button">
-                            <a>
+                            <a class="contact-button">
                                 고객센터<i class="fa fa-angle-right"></i>
                             </a>
                         </td>
