--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -306,6 +306,12 @@ body {
     cursor: pointer;
 }
 
+.dashboard-content .dashboard-menu table td a{
+    display: block;
+    width:100%;
+    height:100%;
+}
+
 .dashboard-content .dashboard-menu table td i {
     position: absolute;
     top: 78px;
@@ -880,3 +886,5 @@ body {
 .ui-widget-overlay{
     background: white;
 }
+
+/*  */
