seller request_refund botton error fix

--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -213,7 +213,7 @@
                                                 <li>
                                                     <form method="POST" action="{% url 'product_order_manage' %}">{% csrf_token %}
                                                         <input type="hidden" name="is_status_change" value="true"/>
-                                                        <input type="hidden" name="new_status" value="refunded"/>
+                                                        <input type="hidden" name="new_status" value="request_refund"/>
                                                         <input type="hidden" name="order_item" value="{{ order_item }}"/>
                                                         <input class="detail_bottom_btn" type="submit" value="작업취소"/>
                                                     </form>
