acocunt_detail part edit (issue #148)

--- a/templates/account/account_detail.html
+++ b/templates/account/account_detail.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="seller_category_each">
                             <span class="category_each_title">작업수</span>
-                            <div><span class="category_each_number">{{ order_item_count }}개</span></div>
+                            <div><span class="category_each_number">{{ order_item_count }}</span>개</div>
                         </div>
                         <div class="seller_category_each">
                             <span class="category_each_title">평균 응답시간</span>
