--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -109,7 +109,7 @@
 .detail_content_top_right .seller_category .seller_category_each{
     display: inline-block;
     border-right:1px solid #cecece;
-    width:24%;
+    width:23%;
     text-align: center;
 }
 
@@ -123,6 +123,16 @@
 
 .seller_category_each .category_each_number{
     font-size: 30px;
+}
+
+@media screen and (max-width: 1024px) {
+    .seller_category_each{
+        font-size: 12px;
+    }
+
+    .seller_category_each .category_each_number{
+        font-size: 20px;
+    }
 }
 
 .detail_content_wrapper_mid{
