fix the position when sns_url is not opened in product_detail (issue #163)

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -245,7 +245,7 @@
                             </a>
                        {% else %}
                             <img class="product-sns-image" src="{% static 'img/lock.png'%}">
-                            <span class="product-sns-text">서비스 구매 고객에게 SNS 주소 공개</span>
+                            <button class="product-sns-text close">서비스 구매 고객에게 SNS 주소 공개</button>
                         {% endif %}
                     </div>
                     <div class="product-sub-info">
