--- a/static/css/dashboard_sidebar.css
+++ b/static/css/dashboard_sidebar.css
@@ -85,13 +85,21 @@
 .dashboard-side .user-money h2 {
     font-size: 15px;
     font-weight: 300;
-    padding-top: 20px;
+    padding-top: 13px;
+}
+
+.dashboard-side .user-money h2:nth-child(1) {
+    padding-top:20px;
+}
+
+_:-ms-lang(x), .dashboard-side .user-money h2:nth-child(1) {
+    padding-top:13px;
 }
 
 .dashboard-side .user-money h3 {
-    font-size: 28px;
+    font-size: 23px;
     font-weight: bold;
-    padding-top: 10px;
+    padding-top: 5px;
     letter-spacing: -.01em;
 }
 
