product_upload moal title change (issue #182)

--- a/templates/product/product_edit.html
+++ b/templates/product/product_edit.html
@@ -266,7 +266,7 @@
                     {{ form.message_to_admin }}
                 </div>
             </div>
-            <div id="dialog-confirm2" title="승인완료">
+            <div id="dialog-confirm2" title="신청완료">
                 승인 요청이 완료됩니다.<br>
                 1~2일 이내에 게시물이 등록됩니다.
             </div>
