--- a/templates/product/product_upload.html
+++ b/templates/product/product_upload.html
@@ -306,7 +306,7 @@
             </div>
 
             <br>
-            <div id="dialog-confirm" title="승인완료">
+            <div id="dialog-confirm" title="신청완료">
                 승인 요청이 완료됩니다.<br>
                 1~2일 이내에 게시물이 등록됩니다.
             </div>
