sns_url is required (issue #184)

--- a/templates/home.html
+++ b/templates/home.html
@@ -254,7 +254,7 @@
                                             {% else %}
                                                 남성
                                             {% endif %}
-                                        </div>
+                                        </div>ㅎ
                                     {% endif %}
                                     {% if product.sns_type == 'blog' and product.highrank_available %}
                                         <div class="card_sns_option blog">
