--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -315,7 +315,8 @@
 
 .seller_products_each_wrapper .list-card .card-main-info .card-type {
     position: relative;
-		float: left;
+    float: left;
+    margin-top:0px;
 }
 
 .seller_products_each_wrapper .list-card .card-main-info .card-type .product-type-image{
@@ -339,6 +340,7 @@
     color: #333;
     z-index: 10;
     overflow:hidden;
+    margin-top:0px;
 }
 
 .seller_products_each_wrapper .list-card .card-main-info .socialup-gauge {
