Test for https cache bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#ffffff">
+    {% block meta %}
+    {% endblock %}
     <title>[소셜업]-SNS 광고는 Social Up!</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicons/apple-touch-icon.png' %}">
@@ -22,11 +24,14 @@
     <style>
         @font-face {
             font-family: NotoSans;
-            src:url('{% static 'fonts/NotoSans-Regular.eot' %}');
-            src:local(※),url('{% static 'fonts/NotoSans-Regular.eot' %}') format('woff'); }
+            src: url('{% static 'fonts/NotoSans-Regular.eot' %}');
+            src: local(※), url('{% static 'fonts/NotoSans-Regular.eot' %}') format('woff');
+        }
+
         body {
-            font-family:'NotoSans',sans-serif;
-            font-weight:300; }
+            font-family: 'NotoSans', sans-serif;
+            font-weight: 300;
+        }
     </style>
     {% block css %}{% endblock %}
     <script src="/static/js/jquery-2.2.4.min.js"></script>
@@ -40,36 +45,36 @@
     </script>
 </head>
 <body>
-    {% include 'header.html' %}
-    {% block jumbotron %}{% endblock %}
-    <div style="margin-bottom: 120px;">
+{% include 'header.html' %}
+{% block jumbotron %}{% endblock %}
+<div style="margin-bottom: 120px;">
     {% block content %}{% endblock %}
+</div>
+<div class="contact">
+    <div class="contact-button">
+        고객센터
     </div>
-    <div class="contact">
-        <div class="contact-button">
-            고객센터
-        </div>
-        <div class="contact-drop-down" style="display:none;">
-            <a class="contact_button">1:1 문의</a>
-            <a href="{% url 'dashboard' %}">신고하기</a>
-        </div>
+    <div class="contact-drop-down" style="display:none;">
+        <a class="contact_button">1:1 문의</a>
+        <a href="{% url 'dashboard' %}">신고하기</a>
     </div>
+</div>
 
-    {% include 'footer.html' %}
-    <script type="text/javascript" src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
-    <script type="text/javascript" src='{% static "js/django.csrf.js" %}'></script>
-    <script type="text/javascript" src="{% static 'js/header.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery-scrolltofixed-min.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
-    {% if user.is_authenticated %}
-        <script type="text/javascript" src="{% static 'js/contact.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/SendBird.js' %}"></script>
-        <script type="text/javascript" src="{% static 'js/message-common.js' %}"></script>
-        <script type="text/javascript">
-            getUnreadMessageCount('{{ user.id }}', '{{ user.get_short_name }}', '{{ user.get_avatar }}');
-        </script>
-    {% endif %}
-    {% block js %}{% endblock %}
+{% include 'footer.html' %}
+<script type="text/javascript" src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+<script type="text/javascript" src='{% static "js/django.csrf.js" %}'></script>
+<script type="text/javascript" src="{% static 'js/header.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery-scrolltofixed-min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
+{% if user.is_authenticated %}
+    <script type="text/javascript" src="{% static 'js/contact.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/SendBird.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/message-common.js' %}"></script>
+    <script type="text/javascript">
+        getUnreadMessageCount('{{ user.id }}', '{{ user.get_short_name }}', '{{ user.get_avatar }}');
+    </script>
+{% endif %}
+{% block js %}{% endblock %}
 
 </body>
 </html>
