fix product_mange product.id -> [product.id] (issue #186)

--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -125,7 +125,7 @@
                         </div>
                         <div class="item_top_content">
                             <div class="content_title">
-                                {{ item.id }}
+                                <span style="color:#888; font-weight: 400;">[{{ item.id }}]</span>
                                 {{ item.oneline_intro }}
                             </div>
                             <div class="content_detail">
