add background color option for manuscript_option_desable box

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -371,10 +371,16 @@
 }
 
 .list-card .card-main-info .card_manuscript_option.separate {
-    background-color: #888;
+    background-color: #909090;
     color:white;
-    border:1px solid #888;
+    border:1px solid #909090;
 }
+.list-card .card-main-info .card_manuscript_option.disable {
+    background-color: #5c5c5c;
+    color:white;
+    border:1px solid #5c5c5c;
+}
+
 .list-card .card-main-info .card_sns_option{
     width:30px;
     position:absolute;
