--- a/templates/category.html
+++ b/templates/category.html
@@ -393,7 +393,7 @@
                                     {% elif product.manuscript_available %}
                                         <span class="card_manuscript_option">원고료 포함</span>
                                     {% else %}
-                                        <span class="card_manuscript_option">원고작성 불가</span>
+                                        <span class="card_manuscript_option disable">원고작성 불가</span>
                                     {% endif %}
                                     {% if product.sns_type == 'facebook' %}
                                         <div class="card_sns_option">
@@ -502,7 +502,7 @@
                                     {% elif product.manuscript_available %}
                                         <span class="card_manuscript_option">원고료 포함</span>
                                     {% else %}
-                                        <span class="card_manuscript_option">원고작성 불가</span>
+                                        <span class="card_manuscript_option disable">원고작성 불가</span>
                                     {% endif %}
                                     {% if product.sns_type == 'facebook' %}
                                         <div class="card_sns_option">
